Merge remote-tracking branch 'origin/appmod/java-upgrade-20260214083522'